--- a/css/about-me.css
+++ b/css/about-me.css
@@ -117,7 +117,7 @@
   left: 0;
   position: absolute;
   top: 0;
-  width: 178px;
+  width: 180px;
 }
 
 .about-me .overlap-group2 {
@@ -125,7 +125,7 @@
   height: 623px;
   margin-left: 123px;
   position: relative;
-  width: 528px;
+  width: 530px;
 }
 
 .about-me .mitch-erickson-1 {
@@ -148,7 +148,7 @@
   letter-spacing: 0;
   position: absolute;
   top: 47px;
-  width: 528px;
+  width: 530px;
 }
 
 .about-me .resume-button {
@@ -174,7 +174,7 @@
 .about-me .skills {
   align-items: flex-end;
   display: flex;
-  height: 498px;
+  height: 500px;
   margin-right: 40.0px;
   margin-top: 46px;
   min-width: 1232px;
@@ -195,7 +195,7 @@
   font-size: var(--font-size-xxxxl);
   font-weight: 600;
   letter-spacing: 0;
-  min-height: 107px;
+  min-height: 105px;
 }
 
 .about-me .navigation-organization {
@@ -208,7 +208,7 @@
 .about-me .organization-is-an-i {
   letter-spacing: 0;
   margin-top: 106px;
-  min-height: 198px;
+  min-height: 200px;
   width: 315px;
 }
 
@@ -218,7 +218,7 @@
   flex-direction: column;
   margin-left: 113px;
   min-height: 345px;
-  width: 326px;
+  width: 330px;
 }
 
 .about-me .appwebsite-design {
@@ -231,7 +231,7 @@
 .about-me .i-design-based-on-w {
   letter-spacing: 0;
   margin-top: 106px;
-  min-height: 198px;
+  min-height: 200px;
   width: 315px;
 }
 
@@ -553,3 +553,25 @@
   min-height: 41px;
   min-width: 92px;
 }
+@media only screen and (max-width: 600px) {
+  #headline {
+    /*background color will turn to grey*/
+    background-color: rgb(175, 175, 175);
+    position: static;
+    margin: 20px;
+  }
+  #heroGrid {
+    grid-template-areas:
+    "About Me"
+    "My Work";
+  }
+  #categoryGrid {
+    grid-template-rows: 300px 300px 300px 300px 300px;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "Skills"
+      "Tools I Know"
+      "My Work"
+      "Footer"
+      "Header"
+
